# fastapi-performance

./: .gitignore  .pre-commit-config.yaml  Readme.md  main.py  pyproject.toml
